--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,11 +23,6 @@ jobs:
       
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Get date (YYYY.MM.dd)
-        id: date
-        run: |
-          echo "FULL_DATE=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
       
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -42,7 +37,7 @@ jobs:
           images: ${{ env.IMAGE_NAME }}
           tags: |
             latest
-            ${{ env.FULL_DATE }}
+            type=schedule,pattern={{date 'YYYY.MM.DD' tz='Europe/Paris'}}
 
       - name: Build and push Docker image
         id: build-and-push
