--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,4 +46,6 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
+          sbom: true
+          provenance: mode=max
           tags: ${{ steps.meta.outputs.tags }}
